# spell-wars

./: .gitignore  LICENSE  README.md
.github/workflows/: server.yml
client/: .clang-format  CMakeLists.txt
client/src/: game.hpp  main.cpp  message.hpp  started_game.hpp  tfqueue.hpp
client/src/game/: chat.hpp  input_state.hpp  state.hpp
client/src/game/state/: just_created.hpp  overloaded.hpp  reaction.hpp  ready_to_start.hpp  running.hpp
server/: Cargo.toml
server/src/: game.rs  main.rs  message.rs
server/src/game/: chat.rs  state.rs
server/src/game/state/: just_created.rs  reaction.rs  ready_to_start.rs  running.rs
